fix: #0002 Added logic in case a score is defined in the web front end first and then updated at the mobile version